# home-stt

./: .gitignore  CHANGELOG.md  README.md  plan-v0.8.0-asr-latency.md  plan-windows-polish-perf.md  plan-windows-qwen3-asr.md  pyproject.toml  review-v0.7.1.md  review-v0.7.5-architecture-product-pm.md
.github/workflows/: tests.yml
scripts/: bench_asr_latency.py  bench_asr_quality.py  gen_asr_bench_audio.py  home_stt.py  qwen3_asr_streaming.py  stt-daemon.py  stt-start.ps1  stt-start.sh  stt-stop.ps1  stt-stop.sh  stt_audio.py  stt_backends.py  stt_config.py  stt_cuda_errors.py  stt_platform.py  stt_platform_mac.py  stt_platform_win.py  stt_state.py  stt_streaming.py  stt_tray.py  stt_web.py  stt_winasyncio.py  text_polisher.py
tests/: conftest.py  smoke_clipboard.py  test_backends_fallback.py  test_config.py  test_home_stt.py  test_polish_bench.py  test_state.py  test_state_machine.py
tests/fixtures/: asr_bench_cases.json  polish_cases.json
