[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "home-stt"
version = "0.7.5"
description = "Hold-to-talk speech-to-text daemon with LLM polish (macOS + Windows)."
readme = "README.md"
requires-python = ">=3.10"

# Runtime dependencies are intentionally NOT listed here. They are
# platform-conditional (mlx-lm on Apple Silicon, torch+CUDA on Windows)
# and README.md is the source of truth for the per-platform install
# commands. This manifest exists solely to register the `home-stt`
# console-script entry point so `pip install -e .` puts it on PATH.

[project.scripts]
home-stt = "home_stt:main"

[tool.setuptools]
package-dir = {"" = "scripts"}
py-modules = ["home_stt"]
