[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "home-stt"
version = "0.7.5"
description = "Hold-to-talk speech-to-text daemon with LLM polish (macOS + Windows)."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4",
    "pynput>=1.7",
    "opencc-python-reimplemented>=0.1.7",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.0",
    "transformers>=4.40",
    "qwen-asr>=0.1",
]
mlx = [
    "mlx>=0.10",
    "mlx-lm>=0.10",
    "mlx-qwen3-asr>=0.1",
]
whisper = [
    "faster-whisper>=1.0",
]
toml = [
    "tomli>=2.0; python_version < '3.11'",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
home-stt = "home_stt:main"

[tool.setuptools]
package-dir = {"" = "scripts"}
py-modules = ["home_stt", "stt_config", "stt_audio"]
