[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "home-stt"
version = "0.8.0"
description = "Hold-to-talk speech-to-text daemon with LLM polish (macOS + Windows)."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4",
    "pynput>=1.7",
    "opencc-python-reimplemented>=0.1.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.0",
    "transformers>=4.40",
    "qwen-asr>=0.1",
]
mlx = [
    "mlx>=0.10",
    "mlx-lm>=0.10",
    "mlx-qwen3-asr>=0.1",
]
whisper = [
    "faster-whisper>=1.0",
]
tray = [
    "pystray>=0.19",
    "Pillow>=9.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
home-stt = "home_stt:main"

[tool.setuptools]
package-dir = {"" = "scripts"}
py-modules = ["home_stt", "stt_config", "stt_audio", "stt_backends", "stt_platform", "stt_platform_mac", "stt_platform_win", "text_polisher"]
